Make checkpoint library static

--- a/libcheckpoint_x64/CMakeLists.txt
+++ b/libcheckpoint_x64/CMakeLists.txt
@@ -2,4 +2,4 @@ project(libcheckpoint_x64)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
 
-add_library(checkpoint_x64 SHARED checkpoint.c)
+add_library(checkpoint_x64 checkpoint.c)
