--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 gtirb
 gtirb-rewriting
 gtirb-functions
-git+https://github.com/GrammaTech/gtirb-capstone.git@master
+gtirb-capstone @ git+https://github.com/GrammaTech/gtirb-capstone.git@master
 gtirb-live-register-analysis
 llvmlite
 pyelftools
