--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-gtirb
-gtirb-rewriting
-gtirb-functions
+gtirb>=2.0.0
+gtirb-rewriting>=0.2.0
+gtirb-functions>=1.0.9
 gtirb-capstone @ git+https://github.com/GrammaTech/gtirb-capstone.git@master
 gtirb-live-register-analysis
-llvmlite
-pyelftools
+llvmlite>=0.41.0
+pyelftools>=0.31
